--- a/leet-code-p2.ipynb
+++ b/leet-code-p2.ipynb
@@ -2,38 +2,40 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1, 4, 5], [2, 9, 10], [6, 11, 12]]\n"
+      "7\n",
+      "12\n"
      ]
     }
    ],
    "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
     "class Solution:\n",
     "    def minPathSum(self, grid: list[list[int]]) -> int:\n",
-    "        m,n = len(grid),len(grid[0])\n",
-    "        s=grid.copy()\n",
-    "        for i in range(m):\n",
-    "            for j in range(n):\n",
-    "                # s[i][j]=grid[i][j]\n",
-    "                a =b = 0\n",
-    "                if i>0:\n",
-    "                    a = s[i-1][j]\n",
-    "                if j>0:\n",
-    "                    b = s[i][j-1]\n",
-    "                s[i][j]+=max(a,b)\n",
-    "        return s\n",
-    "x = Solution()\n",
-    "print(x.minPathSum([[1,3,1],[1,5,1],[4,2,1]]))\n",
-    "s = [4,1,2,4]\n",
-    "x:str = \"124q1\"\n",
+    "        m, n = len(grid), len(grid[0])\n",
+    "        s = grid.copy()\n",
+    "        for i in range(1, n):\n",
+    "            s[0][i] += s[0][i-1]\n",
+    "        for i in range(1, m):\n",
+    "            s[i][0] += s[i-1][0]\n",
+    "        for i in range(1, m):\n",
+    "            for j in range(1, n):\n",
+    "                s[i][j] += min(s[i-1][j], s[i][j-1])\n",
+    "        return s[m-1][n-1]\n",
     "\n",
-    "s[2]=112"
+    "\n",
+    "x = Solution()\n",
+    "print(x.minPathSum([[1, 3, 1], [1, 5, 1], [4, 2, 1]]))\n",
+    "print(x.minPathSum([[1, 2, 3], [4, 5, 6]]))\n",
+    "s = 112\n"
    ]
   }
  ],
@@ -57,4 +59,6 @@
   },
   "orig_nbformat": 4
  },
- "
+ "nbformat": 4,
+ "nbformat_minor": 2
+}
