--- a/leet-code-p2.ipynb
+++ b/leet-code-p2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -18,7 +18,9 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
+    "\n",
     "class Solution:\n",
+    "\n",
     "    def minPathSum(self, grid: list[list[int]]) -> int:\n",
     "        m, n = len(grid), len(grid[0])\n",
     "        s = grid.copy()\n",
@@ -37,11 +39,25 @@
     "print(x.minPathSum([[1, 2, 3], [4, 5, 6]]))\n",
     "s = 112\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from math import factorial\n",
+    "n = input()\n",
+    "s = sum(map(int,n))\n",
+    "s = s*factorial(len(n)-1)*int('1'*len(n))\n",
+    "    \n",
+    "    "
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "date3k2",
    "language": "python",
    "name": "python3"
   },
@@ -57,7 +73,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.11.0"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "92974d13da816c3f2c385f4537bf8bee92befb26563378eaa76f33f4c8792b61"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
