--- a/coding.ipynb
+++ b/coding.ipynb
@@ -326,6 +326,81 @@
     "l = l[:3]+['gà']\n",
     "print(l)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi, im DAt y r , DAt nans DAt hihi DAt\n",
+      "['19', '123', '25', '10']\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = \"Hi, im 19 y r , 123 nans 25 hihi 10\"\n",
+    "import re\n",
+    "num = re.sub('[0-9]+','DAt',s)\n",
+    "numbers = re.findall('[0-9]+',s)\n",
+    "print(num)\n",
+    "print(numbers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HTTP/1.1 200 OK\n",
+      "Date: Tue, 04 Apr 2023 15:11:46 GMT\n",
+      "Server: Apache/2.4.18 (Ubuntu)\n",
+      "Last-Modified: Sat, 13 May 2017 11:22:22 GMT\n",
+      "ETag: \"a7-54f6609245537\"\n",
+      "Accept-Ranges: bytes\n",
+      "Content-Length: 167\n",
+      "Cache-Control: max-age=0, no-cache, no-store, must-revalidate\n",
+      "Pragma: no-cache\n",
+      "Expires: Wed, 11 Jan 1984 05:00:00 GMT\n",
+      "Connection: close\n",
+      "Content-Type: text/plain\n",
+      "\n",
+      "But soft what light through yonder window breaks\n",
+      "It is the east and Juliet is the sun\n",
+      "Arise fair sun and kill the envious moon\n",
+      "Who is already sick and pale with grief\n"
+     ]
+    }
+   ],
+   "source": [
+    "import socket\n",
+    "\n",
+    "mysock = socket.socket(socket.AF_INET, socket.SOCK_STREAM)\n",
+    "mysock.connect(('data.pr4e.org', 80))\n",
+    "cmd = 'GET http://data.pr4e.org/romeo.txt HTTP/1.0\\r\\n\\r\\n'.encode()\n",
+    "mysock.send(cmd)\n",
+    "\n",
+    "while True:\n",
+    "    data = mysock.recv(512)\n",
+    "    if len(data) < 1:\n",
+    "        break\n",
+    "    print(data.decode(),end='')\n",
+    "mysock.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
