--- a/numpyy.ipynb
+++ b/numpyy.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -51,6 +51,30 @@
     "# print(Xbar)\n",
     "# A = np.dot(Xbar.T, Xbar)\n",
     "# print(A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import defaultdict\n",
+    "\n",
+    "s= defaultdict(bool)\n",
+    "s[0]=True\n",
+    "print(s[0])\n",
+    "s.clear()\n",
+    "print(s[0])"
    ]
   }
  ],
