--- a/linear-regression.ipynb
+++ b/linear-regression.ipynb
@@ -5,23 +5,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##          Linear Regression"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "from matplotlib import pyplot as plt\n",
-    "from sklearn.linear_model import LinearRegression,HuberRegressor"
+    "## Linear Regression\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from matplotlib import pyplot as plt\n",
+    "from sklearn.linear_model import LinearRegression, HuberRegressor\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -47,17 +47,18 @@
     "X = np.array([[147, 150, 153, 158, 163, 165, 168, 170, 173, 175, 178, 180,\n",
     "               183, 250]]).T\n",
     "Y = np.array([49, 50, 51, 54, 58, 59, 60, 62, 63, 64, 66, 67, 68, 80])\n",
-    "plt.title('Regression',fontdict={'font':'Fira Code','size':'25'})\n",
+    "plt.title('Regression', fontdict={'font': 'Fira Code', 'size': '25'})\n",
     "model1 = LinearRegression()\n",
     "model1.fit(X, Y)\n",
     "plt.scatter(X, Y, marker='.')\n",
     "plt.xlabel(\"Height\")\n",
     "plt.ylabel(\"Weight\")\n",
-    "plt.plot(X, model1.predict(X), color='red', linewidth=2,label='Linear Regression')\n",
+    "plt.plot(X, model1.predict(X), color='red',\n",
+    "         linewidth=2, label='Linear Regression')\n",
     "\n",
     "huber = HuberRegressor(max_iter=301, epsilon=1.2, alpha=0.3).fit(X, Y)\n",
     "plt.grid()\n",
-    "plt.plot(X, huber.predict(X), color='green',label='Huber Regression')\n",
+    "plt.plot(X, huber.predict(X), color='green', label='Huber Regression')\n",
     "plt.legend()\n",
     "plt.show()\n",
     "print('Coefficients:', model1.coef_[0], huber.coef_)\n",
