--- a/k-means.ipynb
+++ b/k-means.ipynb
@@ -24,7 +24,7 @@
     "X0 = np.random.multivariate_normal(means[0], cov, N)\n",
     "X1 = np.random.multivariate_normal(means[1], cov, N)\n",
     "X2 = np.random.multivariate_normal(means[2], cov, N)\n",
-    "K = 3"
+    "K = 3\n"
    ]
   },
   {
@@ -145,22 +145,30 @@
    "source": [
     "np.random.seed(163)\n",
     "\n",
+    "# Initialize random centroids\n",
+    "\n",
     "\n",
     "def init_centroids(X, k):\n",
     "    return X[np.random.choice(X.shape[0], k, replace=False)]\n",
+    "\n",
+    "# Assign labels for all points\n",
     "\n",
     "\n",
     "def assign_label(X, centroids):\n",
     "    D = cdist(X, centroids)\n",
     "    return np.argmin(D, axis=1)\n",
     "\n",
+    "# Stop condition\n",
+    "\n",
     "\n",
     "def has_converged(centroids, new_centroids):\n",
     "    return (set([tuple(a) for a in centroids]) ==\n",
     "            set([tuple(a) for a in new_centroids]))\n",
     "\n",
+    "# Update centroids\n",
     "\n",
-    "def update_centroid(X, labels, K):\n",
+    "\n",
+    "def update_centroids(X, labels, K):\n",
     "    centroids = np.zeros((K, X.shape[1]))\n",
     "    for i in range(K):\n",
     "        centroids[i, :] = np.mean(X[labels == i, :], axis=0)\n",
@@ -171,33 +179,54 @@
     "    count = 0\n",
     "    centroids = init_centroids(X, K)\n",
     "    labels = assign_label(X, centroids)\n",
-    "    colors= ['royalblue','orange','limegreen']\n",
+    "    colors = ['royalblue', 'orange', 'limegreen']\n",
     "    while True:\n",
     "        # Visualize training process\n",
     "        plt.figure(count)\n",
     "        for i in range(K):\n",
-    "            plt.scatter(X[labels==i, 0], X[labels==i, 1], marker='.',color=colors[i])\n",
-    "        plt.scatter(centroids[:, 0], centroids[:, 1], marker='o',linewidths=5,color='red')\n",
+    "            plt.scatter(X[labels == i, 0], X[labels == i, 1],\n",
+    "                        marker='.', color=colors[i])\n",
+    "        plt.scatter(centroids[:, 0], centroids[:, 1],\n",
+    "                    marker='o', linewidths=5, color='red')\n",
     "        plt.xticks([])\n",
     "        plt.yticks([])\n",
     "        # Update centroids\n",
-    "        if has_converged(centroids, update_centroid(X, labels, K)):\n",
+    "        if has_converged(centroids, update_centroids(X, labels, K)):\n",
     "            break\n",
     "        else:\n",
-    "            centroids = update_centroid(X, labels, K)\n",
+    "            centroids = update_centroids(X, labels, K)\n",
     "            labels = assign_label(X, centroids)\n",
     "        count += 1\n",
     "    return centroids\n",
+    "\n",
     "\n",
     "X = np.concatenate((X0, X1, X2), axis=0)\n",
     "print(k_means(X, K))\n",
     "plt.figure(8)\n",
     "plt.title('True data')\n",
-    "plt.scatter(X0[:, 0], X0[:, 1], marker='.',color='orange')\n",
-    "plt.scatter(X1[:, 0], X1[:, 1], marker='.',color='limegreen')\n",
-    "plt.scatter(X2[:, 0], X2[:, 1], marker='.',color='royalblue')\n",
+    "plt.scatter(X0[:, 0], X0[:, 1], marker='.', color='orange')\n",
+    "plt.scatter(X1[:, 0], X1[:, 1], marker='.', color='limegreen')\n",
+    "plt.scatter(X2[:, 0], X2[:, 1], marker='.', color='royalblue')\n",
     "plt.xticks([])\n",
-    "plt.yticks([])"
+    "plt.yticks([])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12232\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = ['12', '232']\n",
+    "print(''.join(l))\n"
    ]
   }
  ],
