--- a/leet-code-p1.ipynb
+++ b/leet-code-p1.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(8,)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "l = [[1,2,4,7],[12,20,31,37]]\n",
@@ -22,18 +14,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6\n",
-      "(3, 5)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "nums = [0,0,0,2,0,0,0,0,12,14,2]\n",
     "nums = [0,0,0,2,0,0]\n",
@@ -54,17 +37,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "defaultdict(<class 'list'>, {1: [3], 3: [1, 2], 2: [3]})\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from collections import defaultdict\n",
     "from queue import SimpleQueue\n",
@@ -122,20 +97,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "False\n",
-      "1\n",
-      "False\n",
-      "True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "l = [[2,4],[4,2]]\n",
     "s =set(list(map(tuple,l)))\n",
@@ -159,17 +123,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from collections import defaultdict\n",
     "class Solution:\n",
@@ -191,17 +147,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from collections import defaultdict\n",
     "class Graph:\n",
@@ -253,18 +201,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "131\n",
-      "False\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from collections import defaultdict\n",
     "\n",
@@ -291,6 +230,16 @@
     "                m[s[i]] = i\n",
     "                i += 1\n",
     "        return max(longest, sub)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x ='1312dasgvvxz'\n",
+    "print(x[:-1])"
    ]
   }
  ],
