--- a/k-means.ipynb
+++ b/k-means.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
        "([], [])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -213,20 +213,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "12232\n"
+      "Centers found by scikit-learn:\n",
+      "[[8.07476866 3.01494931]\n",
+      " [3.02429957 5.95334038]\n",
+      " [1.98417154 1.96141961]]\n",
+      "[1 2 2 ... 1 1 1]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\nguye\\Documents\\Downloads\\Programming\\date3k2\\Lib\\site-packages\\sklearn\\cluster\\_kmeans.py:870: FutureWarning: The default value of `n_init` will change from 10 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
+      "  warnings.warn(\n"
      ]
     }
    ],
    "source": [
-    "l = ['12', '232']\n",
-    "print(''.join(l))\n"
+    "from sklearn.cluster import KMeans\n",
+    "model = KMeans(n_clusters=3, random_state=0).fit(X)\n",
+    "print('Centers found by scikit-learn:')\n",
+    "print(model.cluster_centers_)\n",
+    "pred_label = model.predict(X)\n",
+    "print(pred_label)"
    ]
   }
  ],
