--- a/leet-code-p2.ipynb
+++ b/leet-code-p2.ipynb
@@ -109,6 +109,46 @@
     "print(sum(l))\n",
     "\n"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Longest Subsequence String"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    def longestSubStr(self,a,b):\n",
+    "        m=len(a)\n",
+    "        n=len(b)\n",
+    "        l = [[0 for _ in range(n+1)] for _ in range(m+1)]\n",
+    "        for i in range(1,m+1):\n",
+    "            for j in range(1,n+1):\n",
+    "                if a[i-1]==b[j-1]:\n",
+    "                        l[i][j]= l[i-1][j-1]+1\n",
+    "                else:\n",
+    "                    l[i][j]=max(l[i-1][j],l[i][j-1])\n",
+    "        return l[m][n]\n",
+    "\n",
+    "x = Solution()\n",
+    "print(x.longestSubStr(\"cbbd\",\"dbbc\"))\n",
+    "# print(l[-1][0])"
+   ]
   }
  ],
  "metadata": {
