--- a/leet-code-p1.ipynb
+++ b/leet-code-p1.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(8,)\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "l = [[1,2,4,7],[12,20,31,37]]\n",
@@ -14,9 +22,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "(3, 5)\n"
+     ]
+    }
+   ],
    "source": [
     "nums = [0,0,0,2,0,0,0,0,12,14,2]\n",
     "nums = [0,0,0,2,0,0]\n",
@@ -37,9 +54,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "defaultdict(<class 'list'>, {1: [3], 3: [1, 2], 2: [3]})\n"
+     ]
+    }
+   ],
    "source": [
     "from collections import defaultdict\n",
     "from queue import SimpleQueue\n",
@@ -97,9 +122,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "1\n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "l = [[2,4],[4,2]]\n",
     "s =set(list(map(tuple,l)))\n",
@@ -123,9 +159,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "from collections import defaultdict\n",
     "class Solution:\n",
@@ -147,9 +191,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-1\n"
+     ]
+    }
+   ],
    "source": [
     "from collections import defaultdict\n",
     "class Graph:\n",
@@ -201,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,16 +282,6 @@
     "                m[s[i]] = i\n",
     "                i += 1\n",
     "        return max(longest, sub)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x ='1312dasgvvxz'\n",
-    "print(x[:-1])"
    ]
   }
  ],
