--- a/Python/naive-bayes.ipynb
+++ b/Python/naive-bayes.ipynb
@@ -10,28 +10,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9807692307692307\n"
+      "Accuracy: 98.08%\n"
      ]
     }
    ],
    "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
     "from scipy.sparse import coo_matrix\n",
     "from sklearn.metrics import accuracy_score\n",
     "from sklearn.naive_bayes import MultinomialNB\n",
@@ -53,13 +45,14 @@
     "    return (data, labels)\n",
     "\n",
     "\n",
+    "# Path to data\n",
     "path = '../email-spam-filter/'\n",
     "train_data_path = 'train-features.txt'\n",
     "train_labels_path = 'train-labels.txt'\n",
     "test_data_path = 'test-features.txt'\n",
     "test_labels_path = 'test-labels.txt'\n",
     "\n",
-    "# Making matrix data and labels for naive Bayes\n",
+    "# Get matrix data and labels for naive Bayes\n",
     "train_data, train_labels = get_data_labels(\n",
     "    path+train_data_path, path+train_labels_path)\n",
     "test_data, test_labels = get_data_labels(\n",
@@ -68,7 +61,7 @@
     "# Train and test\n",
     "model = MultinomialNB().fit(train_data, train_labels)\n",
     "pre = model.predict(test_data)\n",
-    "print(accuracy_score(test_labels, pre))\n"
+    "print(f\"Accuracy: {round(accuracy_score(test_labels, pre)*100,2)}%\")\n"
    ]
   }
  ],
