--- a/Python/naive-bayes.ipynb
+++ b/Python/naive-bayes.ipynb
@@ -63,6 +63,26 @@
     "pre = model.predict(test_data)\n",
     "print(f\"Accuracy: {round(accuracy_score(test_labels, pre)*100,2)}%\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "deque(['12', 123])\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import deque\n",
+    "q = deque(['12'])\n",
+    "q.append(123)\n",
+    "print(q)"
+   ]
   }
  ],
  "metadata": {
