--- a/Python/softmax.ipynb
+++ b/Python/softmax.ipynb
@@ -2,21 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2.419278491495035\n",
-      "[2 1 2 1]\n",
-      "[[-0.4604913  -0.48754728  0.94803858]\n",
-      " [-0.33074307 -0.38485502  0.71559809]\n",
-      " [-1.11348078 -1.08642481  2.19990559]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "# softmax stable function\n",
@@ -43,17 +31,57 @@
     "    A = stable_softmax(X.dot(W))  # shape of (N, C)\n",
     "    id0 = range(X.shape[0])\n",
     "    A[id0, y] -= 1  # A - Y, shape of (N, C)\n",
-    "    return X.T.dot(A)/X.shape[0]\n",
+    "    # return X.T.dot(A)/X.shape[0]\n",
+    "    return A\n",
     "\n",
     "\n",
     "# test\n",
     "X = np.array([[3, 3, 5], [1, 2, -1], [3, 3, 5], [1, 2, -1]])\n",
     "y = np.array([0, 2, 1, 1])\n",
     "W = np.array([[1, 0, 0], [0, 1, 0], [0, 0, 1]])\n",
-    "print(softmax_loss(X, y, W))\n",
+    "# print(softmax_loss(X, y, W))\n",
     "A = stable_softmax(X.dot(W))\n",
-    "print(np.argmax(A, axis=1))\n",
+    "print(A)\n",
+    "# print(np.argmax(A, axis=1))\n",
     "print(softmax_grad(X, y, W))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Neural Network on MNIST using scikit-learn\n",
+    "# Path: Python\\mnist_sklearn.ipynb\n",
+    "import numpy as np\n",
+    "from sklearn.neural_network import MLPClassifier\n",
+    "from sklearn.datasets import fetch_openml\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "import joblib\n",
+    "import matplotlib.pyplot as plt\n",
+    "import time\n",
+    "mnist = fetch_openml('mnist_784', version=1, cache=True)\n",
+    "X = mnist.data\n",
+    "y = mnist.target\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)\n",
+    "scaler = StandardScaler()\n",
+    "scaler.fit(X_train)\n",
+    "X_train = scaler.transform(X_train)\n",
+    "X_test = scaler.transform(X_test)\n",
+    "mlp = MLPClassifier(hidden_layer_sizes=(100, 100, 100), max_iter=1000,random_state=3,alpha=0.001)\n",
+    "start = time.time()\n",
+    "mlp.fit(X_train, y_train)\n",
+    "end = time.time()\n",
+    "print(\"Training time: \", end-start)\n",
+    "predictions = mlp.predict(X_test)\n",
+    "print(accuracy_score(y_test, predictions))\n",
+    "joblib.dump(mlp, 'mlp.pkl')\n",
+    "mlp = joblib.load('mlp.pkl')\n",
+    "predictions = mlp.predict(X_test)\n",
+    "print(accuracy_score(y_test, predictions))\n"
    ]
   }
  ],
