--- a/Python/softmax.ipynb
+++ b/Python/softmax.ipynb
@@ -52,36 +52,72 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Neural Network on MNIST using scikit-learn\n",
-    "# Path: Python\\mnist_sklearn.ipynb\n",
-    "import numpy as np\n",
-    "from sklearn.neural_network import MLPClassifier\n",
-    "from sklearn.datasets import fetch_openml\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import accuracy_score\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "import joblib\n",
-    "import matplotlib.pyplot as plt\n",
-    "import time\n",
-    "mnist = fetch_openml('mnist_784', version=1, cache=True)\n",
-    "X = mnist.data\n",
-    "y = mnist.target\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)\n",
-    "scaler = StandardScaler()\n",
-    "scaler.fit(X_train)\n",
-    "X_train = scaler.transform(X_train)\n",
-    "X_test = scaler.transform(X_test)\n",
-    "mlp = MLPClassifier(hidden_layer_sizes=(100, 100, 100), max_iter=1000,random_state=3,alpha=0.001)\n",
-    "start = time.time()\n",
-    "mlp.fit(X_train, y_train)\n",
-    "end = time.time()\n",
-    "print(\"Training time: \", end-start)\n",
-    "predictions = mlp.predict(X_test)\n",
-    "print(accuracy_score(y_test, predictions))\n",
-    "joblib.dump(mlp, 'mlp.pkl')\n",
-    "mlp = joblib.load('mlp.pkl')\n",
-    "predictions = mlp.predict(X_test)\n",
-    "print(accuracy_score(y_test, predictions))\n"
+    "# # Neural Network on MNIST using scikit-learn\n",
+    "# # Path: Python\\mnist_sklearn.ipynb\n",
+    "# import numpy as np\n",
+    "# from sklearn.neural_network import MLPClassifier\n",
+    "# from sklearn.datasets import fetch_openml\n",
+    "# from sklearn.model_selection import train_test_split\n",
+    "# from sklearn.metrics import accuracy_score\n",
+    "# from sklearn.preprocessing import StandardScaler\n",
+    "# import joblib\n",
+    "# import matplotlib.pyplot as plt\n",
+    "# import time\n",
+    "# mnist = fetch_openml('mnist_784', version=1, cache=True)\n",
+    "# X = mnist.data\n",
+    "# y = mnist.target\n",
+    "# X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)\n",
+    "# scaler = StandardScaler()\n",
+    "# scaler.fit(X_train)\n",
+    "# X_train = scaler.transform(X_train)\n",
+    "# X_test = scaler.transform(X_test)\n",
+    "# mlp = MLPClassifier(hidden_layer_sizes=(100, 100, 100), max_iter=1000,random_state=3,alpha=0.001)\n",
+    "# start = time.time()\n",
+    "# mlp.fit(X_train, y_train)\n",
+    "# end = time.time()\n",
+    "# print(\"Training time: \", end-start)\n",
+    "# predictions = mlp.predict(X_test)\n",
+    "# print(accuracy_score(y_test, predictions))\n",
+    "# joblib.dump(mlp, 'mlp.pkl')\n",
+    "# mlp = joblib.load('mlp.pkl')\n",
+    "# predictions = mlp.predict(X_test)\n",
+    "# print(accuracy_score(y_test, predictions))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 9\n",
+      "2 6\n",
+      "3 7\n",
+      "4 8\n",
+      "5 7\n"
+     ]
+    }
+   ],
+   "source": [
+    "def isSimilar(a, b):\n",
+    "    d = 0\n",
+    "    for i in range(len(a)):\n",
+    "        if d > 2:\n",
+    "            return False\n",
+    "        elif a[i] != b[i]:\n",
+    "            d += 1\n",
+    "    return d in [0, 2]\n",
+    "\n",
+    "\n",
+    "l = [\"kccomwcgcs\", \"socgcmcwkc\", \"sgckwcmcoc\", \"coswcmcgkc\", \"cowkccmsgc\", \"cosgmccwkc\",\n",
+    "     \"sgmkwcccoc\", \"coswmccgkc\", \"kowcccmsgc\", \"kgcomwcccs\"]\n",
+    "for i in range(len(l)-1):\n",
+    "    for j in range(i+1, len(l)):\n",
+    "        if isSimilar(l[i], l[j]):\n",
+    "            print(i, j)\n"
    ]
   }
  ],
