--- a/Python/first-ml.ipynb
+++ b/Python/first-ml.ipynb
@@ -242,6 +242,105 @@
     "x = Solution()\n",
     "print(x.longestCycle([2,-1,3,1]))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-1\n"
+     ]
+    }
+   ],
+   "source": [
+    "from typing import List\n",
+    "class DSU:\n",
+    "    def __init__(self, n):\n",
+    "        self.parent = list(range(n))\n",
+    "        self.rank = [0] * n\n",
+    "\n",
+    "    def find(self, x):\n",
+    "        if self.parent[x] == x:\n",
+    "            return x\n",
+    "        self.parent[x] = self.find(self.parent[x])\n",
+    "        return self.parent[x]\n",
+    "\n",
+    "    def union(self, x, y):\n",
+    "        xset, yset = self.find(x), self.find(y)\n",
+    "        if xset != yset:\n",
+    "            if self.rank[xset] < self.rank[yset]:\n",
+    "                self.parent[xset] = yset\n",
+    "            else:\n",
+    "                self.parent[yset] = xset\n",
+    "            if self.rank[xset] == self.rank[yset]:\n",
+    "                self.rank[xset] += 1\n",
+    "            return True\n",
+    "        return False\n",
+    "class Solution:\n",
+    "    def maxNumEdgesToRemove(self, n: int, edges: List[List[int]]) -> int:\n",
+    "        edges.sort(key=lambda x:x[0],reverse=True)\n",
+    "        dsu_alice = DSU(n)\n",
+    "        dsu_bob = DSU(n)\n",
+    "        ans = 0\n",
+    "        for t,u,v in edges:\n",
+    "            if t==3:\n",
+    "                if not dsu_alice.union(u-1,v-1):\n",
+    "                    ans+=1\n",
+    "                else:\n",
+    "                    dsu_bob.union(u-1,v-1)\n",
+    "            elif t==2:\n",
+    "                if not dsu_bob.union(u-1,v-1):\n",
+    "                    ans+=1\n",
+    "            else:\n",
+    "                if not dsu_alice.union(u-1,v-1):\n",
+    "                    ans+=1\n",
+    "        if len(set(dsu_alice.find(i) for i in range(n)))>1 or len(set(dsu_bob.find(i) for i in range(n)))>1:\n",
+    "            return -1\n",
+    "        return ans\n",
+    "edges = [[3,1,2],[3,2,3],[1,1,3],[1,2,4],[1,1,2],[2,3,4]]\n",
+    "edges = [[3,2,3],[1,1,2],[2,3,4]]\n",
+    "print(Solution().maxNumEdgesToRemove(4,edges))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    def isWinner(self, player1: List[int], player2: List[int]) -> int:\n",
+    "        s1=s2=0\n",
+    "        for i in range(len(player1)):\n",
+    "            if i>1 and (player1[i-1]==10 or player1[i-2]==10) or (i==1 and player1[i-1]==10):\n",
+    "                s1+=2*player1[i]\n",
+    "            else:\n",
+    "                s1+=player1[i]\n",
+    "            if i>1 and (player2[i-1]==10 or player2[i-2]==10) or (i==1 and player2[i-1]==10):\n",
+    "                s2+=2*player2[i]\n",
+    "            else:\n",
+    "                s2+=player2[i]\n",
+    "        if s1>s2:\n",
+    "            return 1\n",
+    "        elif s1<s2:\n",
+    "            return 2\n",
+    "        return 0\n",
+    "player1 = [5,6,1,10]\n",
+    "player2 = [5,1,10,5]\n",
+    "print(Solution().isWinner(player1,player2))"
+   ]
   }
  ],
  "metadata": {
