Disjoint set union

--- a/Python/first-ml.ipynb
+++ b/Python/first-ml.ipynb
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -285,22 +285,26 @@
     "        edges.sort(key=lambda x:x[0],reverse=True)\n",
     "        dsu_alice = DSU(n)\n",
     "        dsu_bob = DSU(n)\n",
-    "        ans = 0\n",
-    "        for t,u,v in edges:\n",
-    "            if t==3:\n",
-    "                if not dsu_alice.union(u-1,v-1):\n",
-    "                    ans+=1\n",
+    "        alice_edges = bob_edges = removed_edges =0\n",
+    "        for e, u, v in edges:\n",
+    "            if e == 3:\n",
+    "                if dsu_alice.union( u-1, v-1):\n",
+    "                    dsu_bob.union(u-1, v-1)\n",
+    "                    alice_edges += 1\n",
+    "                    bob_edges += 1\n",
     "                else:\n",
-    "                    dsu_bob.union(u-1,v-1)\n",
-    "            elif t==2:\n",
-    "                if not dsu_bob.union(u-1,v-1):\n",
-    "                    ans+=1\n",
+    "                    removed_edges += 1\n",
+    "            elif e == 2:\n",
+    "                if dsu_bob.union(u-1, v-1):\n",
+    "                    bob_edges += 1\n",
+    "                else:\n",
+    "                    removed_edges += 1\n",
     "            else:\n",
-    "                if not dsu_alice.union(u-1,v-1):\n",
-    "                    ans+=1\n",
-    "        if len(set(dsu_alice.find(i) for i in range(n)))>1 or len(set(dsu_bob.find(i) for i in range(n)))>1:\n",
-    "            return -1\n",
-    "        return ans\n",
+    "                if dsu_alice.union(u-1, v-1):\n",
+    "                    alice_edges += 1\n",
+    "                else:\n",
+    "                    removed_edges += 1          \n",
+    "        return removed_edges if alice_edges == bob_edges == n-1 else -1\n",
     "edges = [[3,1,2],[3,2,3],[1,1,3],[1,2,4],[1,1,2],[2,3,4]]\n",
     "edges = [[3,2,3],[1,1,2],[2,3,4]]\n",
     "print(Solution().maxNumEdgesToRemove(4,edges))"
@@ -308,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -340,6 +344,15 @@
     "player1 = [5,6,1,10]\n",
     "player2 = [5,1,10,5]\n",
     "print(Solution().isWinner(player1,player2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = \"hehe{}\""
    ]
   }
  ],
