--- a/Python/leet-code-p1.ipynb
+++ b/Python/leet-code-p1.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(8,)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "l = [[1,2,4,7],[12,20,31,37]]\n",
@@ -22,18 +14,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6\n",
-      "(3, 5)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "nums = [0,0,0,2,0,0,0,0,12,14,2]\n",
     "nums = [0,0,0,2,0,0]\n",
@@ -54,17 +37,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "defaultdict(<class 'list'>, {1: [3], 3: [1, 2], 2: [3]})\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from collections import defaultdict\n",
     "from queue import SimpleQueue\n",
@@ -122,20 +97,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "False\n",
-      "1\n",
-      "False\n",
-      "True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "l = [[2,4],[4,2]]\n",
     "s =set(list(map(tuple,l)))\n",
@@ -159,17 +123,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from collections import defaultdict\n",
     "class Solution:\n",
@@ -191,17 +147,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from collections import defaultdict\n",
     "class Graph:\n",
@@ -253,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,6 +230,28 @@
     "                m[s[i]] = i\n",
     "                i += 1\n",
     "        return max(longest, sub)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l=[1,2,3]\n",
+    "# print(l[0].isdigit())\n",
+    "l.pop()"
    ]
   }
  ],
