--- a/Python/pca.ipynb
+++ b/Python/pca.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -36,6 +36,89 @@
     "plt.axis('off')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['i', 'love']\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import Counter\n",
+    "words = [\"love\",\"love\",\"leetcode\",\"i\",\"i\",\"coding\"]\n",
+    "k = 2\n",
+    "x= Counter(words)\n",
+    "s = sorted(x.items(), key=lambda x: (-x[1], x[0]))\n",
+    "print([i[0] for i in s[:k]])\n",
+    "# print(x)\n",
+    "# sort s by the order of frequency, if same frequency, sort by lexicographical order\n",
+    "# s = sorted(x, key=lambda x: (-x[1], x[0]))\n",
+    "# print(s)\n",
+    "# print([i[0] for i in s])\n",
+    "# print(sorted([i[0] for i in x]))\n",
+    "# # print(Counter(words).most_common(k))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11001011 10110010 10001110 01111111 "
+     ]
+    }
+   ],
+   "source": [
+    "# convert to 8 bit binary\n",
+    "def toBinary(n):\n",
+    "    return bin(n)[2:].zfill(8)\n",
+    "x = [203,178,142,127] # => network address\n",
+    "for i in x:\n",
+    "    print(toBinary(i),end=\" \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import List\n",
+    "class Solution:\n",
+    "    mod = 10 ** 9 + 7\n",
+    "    def numSubseq(self, nums: List[int], target: int) -> int:\n",
+    "        nums.sort()\n",
+    "        l, r = 0, len(nums) - 1\n",
+    "        res = 0\n",
+    "        while l <= r:\n",
+    "            if nums[l] + nums[r] > target:\n",
+    "                r -= 1\n",
+    "            else:\n",
+    "                res += pow(2, r - l, self.mod)\n",
+    "                l += 1\n",
+    "        return res % self.mod\n",
+    "# nums = np.random.randint(1,100000,1000)\n",
+    "# target = 9\n",
+    "# print(Solution().numSubseq(nums,target))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
