--- a/Python/coding.ipynb
+++ b/Python/coding.ipynb
@@ -398,6 +398,26 @@
     "    print(data.decode(),end='')\n",
     "mysock.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dck. blue is sky the\n"
+     ]
+    }
+   ],
+   "source": [
+    "import bisect\n",
+    "l = [1,5,7,9,10]\n",
+    "s= '    the sky   is    blue   dck.   '\n",
+    "print(' '.join(s.split()[::-1]))\n"
+   ]
   }
  ],
  "metadata": {
