--- a/Python/leet-code-p1.ipynb
+++ b/Python/leet-code-p1.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(8,)\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "l = [[1,2,4,7],[12,20,31,37]]\n",
@@ -14,9 +22,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "(3, 5)\n"
+     ]
+    }
+   ],
    "source": [
     "nums = [0,0,0,2,0,0,0,0,12,14,2]\n",
     "nums = [0,0,0,2,0,0]\n",
@@ -37,9 +54,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "defaultdict(<class 'list'>, {1: [3], 3: [1, 2], 2: [3]})\n"
+     ]
+    }
+   ],
    "source": [
     "from collections import defaultdict\n",
     "from queue import SimpleQueue\n",
@@ -97,9 +122,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "1\n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "l = [[2,4],[4,2]]\n",
     "s =set(list(map(tuple,l)))\n",
@@ -123,9 +159,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "from collections import defaultdict\n",
     "class Solution:\n",
@@ -147,9 +191,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-1\n"
+     ]
+    }
+   ],
    "source": [
     "from collections import defaultdict\n",
     "class Graph:\n",
@@ -201,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +266,7 @@
     "            return len(s)\n",
     "        i = 0  # biến duyệt xâu s\n",
     "        sub = 0\n",
-    "        m = defaultdict(bool)\n",
+    "        m = defaultdict(int)\n",
     "        longest = 0\n",
     "        head = 0  # đánh dấu đầu của chuỗi dài nhất thỏa mãn yêu cầu khi còn đang duyệt\n",
     "        while i < len(s):\n",
@@ -234,24 +286,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "l=[1,2,3]\n",
-    "# print(l[0].isdigit())\n",
-    "l.pop()"
+    "l = \"dfgkjnwe\"\n",
+    "x = [2,4,2]\n",
+    "x[2]=4"
    ]
   }
  ],
