--- a/Python/linear-regression.ipynb
+++ b/Python/linear-regression.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
     "plt.title('Regression', fontdict={'font': 'Fira Code', 'size': '25'})\n",
     "model1 = LinearRegression()\n",
     "model1.fit(X, Y)\n",
-    "plt.scatter(X, Y, marker='.')\n",
+    "plt.scatter(X, Y, marker=\"o\")\n",
     "plt.xlabel(\"Height\")\n",
     "plt.ylabel(\"Weight\")\n",
     "plt.plot(X, model1.predict(X), color='red',\n",
