--- a/Python/coding.ipynb
+++ b/Python/coding.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,17 +11,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "False\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "n= 2\n",
     "i=0\n",
@@ -35,20 +27,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 2, 3, 4, 2, 9, 5, 1, 4]\n",
-      "[2, 4, 3, 2, 1]\n",
-      "[]\n",
-      "[5, 9]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x =[1,2,3,4,2]\n",
     "y = [9,5,1,4]\n",
@@ -64,17 +45,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "531\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class TreeNode:\n",
     "    def __init__(self, val=0, left=None, right=None):\n",
@@ -106,17 +79,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "s = [\"dog\",\"racecar\",\"car\"]\n",
     "print(len(min(s,key=len)))"
@@ -124,19 +89,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "False\n",
-      "2 14 87 21 83 21\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from queue import Queue\n",
     "p = Queue()\n",
@@ -151,17 +106,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class TreeNode:\n",
     "    def __init__(self, val=0, left=None, right=None):\n",
@@ -199,17 +146,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(1, 4)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = .25\n",
     "print(x.as_integer_ratio())\n"
@@ -217,18 +156,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Counter({'lc': 1, 'cl': 1, 'gg': 1})\n",
-      "6\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "from collections import Counter\n",
@@ -258,19 +188,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3\n",
-      "2\n",
-      "4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "s = ['B',\"A\",\"A\",\"A\",\"B\",\"B\"]\n",
     "x =Counter(s)\n",
@@ -287,21 +207,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'Solution' object has no attribute 'longestPalindrome'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[11], line 6\u001b[0m\n\u001b[0;32m      3\u001b[0m         \u001b[39mpass\u001b[39;00m\n\u001b[0;32m      5\u001b[0m x\u001b[39m=\u001b[39m Solution()\n\u001b[1;32m----> 6\u001b[0m \u001b[39mprint\u001b[39m(x\u001b[39m.\u001b[39;49mlongestPalindrome([\u001b[39m\"\u001b[39m\u001b[39mlc\u001b[39m\u001b[39m\"\u001b[39m,\u001b[39m\"\u001b[39m\u001b[39mcl\u001b[39m\u001b[39m\"\u001b[39m,\u001b[39m\"\u001b[39m\u001b[39mgg\u001b[39m\u001b[39m\"\u001b[39m]))\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'Solution' object has no attribute 'longestPalindrome'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Solution:\n",
     "    def leastInterval(self, tasks: list[str], n: int) -> int:\n",
@@ -315,15 +223,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 2, 4, 'gà']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "l = [1,2,4,2,4]\n",
@@ -335,16 +235,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hi, im DAt y r , DAt nans DAt hihi DAt\n",
-      "['19', '123', '25', '10']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "s = \"Hi, im 19 y r , 123 nans 25 hihi 10\"\n",
     "import re\n",
@@ -356,33 +247,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "HTTP/1.1 200 OK\n",
-      "Date: Fri, 05 May 2023 18:06:09 GMT\n",
-      "Server: Apache/2.4.18 (Ubuntu)\n",
-      "Last-Modified: Sat, 13 May 2017 11:22:22 GMT\n",
-      "ETag: \"a7-54f6609245537\"\n",
-      "Accept-Ranges: bytes\n",
-      "Content-Length: 167\n",
-      "Cache-Control: max-age=0, no-cache, no-store, must-revalidate\n",
-      "Pragma: no-cache\n",
-      "Expires: Wed, 11 Jan 1984 05:00:00 GMT\n",
-      "Connection: close\n",
-      "Content-Type: text/plain\n",
-      "\n",
-      "But soft what light through yonder window breaks\n",
-      "It is the east and Juliet is the sun\n",
-      "Arise fair sun and kill the envious moon\n",
-      "Who is already sick and pale with grief\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import socket\n",
     "\n",
@@ -401,22 +268,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "dck. blue is sky the\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import bisect\n",
     "l = [1,5,7,9,10]\n",
     "s= '    the sky   is    blue   dck.   '\n",
     "print(' '.join(s.split()[::-1]))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l =[1,8,6,2,5,4,1000,10000,3,7,4,2,4]\n",
+    "x = sorted([(x,i) for i,x in enumerate(l)])\n",
+    "print(x)\n",
+    "n,m,s = len(l)-1,0,0\n",
+    "check = [False for _ in range(n+2)]\n",
+    "for i in x:\n",
+    "    s = max(s,max(n-i[1],i[1]-m)*i[0])\n",
+    "    check[i[1]]=True\n",
+    "    if i[1]==n:\n",
+    "        while check[n]:\n",
+    "            n-=1\n",
+    "    elif i[1]==m:\n",
+    "        while check[m]:\n",
+    "            m+=1\n",
+    "print(s)\n",
+    "\n",
+    "# Blackpink in your area\n",
+    "# Blackpink in your area\n",
+    "# Blackpink in your area\n",
+    "# Blackpink in your area\n",
+    "# How you like that\n",
+    "# Ice cream chillin', chillin'\n",
+    "# Ice cream chillin'\n",
+    "# Lisa Jisoo Jennie Rosé\n"
    ]
   }
  ],
