--- a/Python/leet-code-p1.ipynb
+++ b/Python/leet-code-p1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,13 +286,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Erasing time\n"
+     ]
+    }
+   ],
    "source": [
-    "l = \"dfgkjnwe\"\n",
-    "x = [2,4,2]\n",
-    "x[2]=4"
+    "# King Crimson is a stand in JoJo's Bizarre Adventure, it can erase time and skip it, so I named this function after it\n",
+    "# I'm a big fan of JoJo\n",
+    "# The only stand that can beat King Crimson is GER (Gold Experience Requiem)\n",
+    "# GER can revert any action to zero, so it can revert King Crimson's action to zero, which means King Crimson can't do anything to GER\n",
+    "# GER is owned by Giorno Giovanna, the main character of JoJo part 5\n",
+    "# Giorno is the son of Dio Brando, the main villain of JoJo part 1 and 3"
    ]
   }
  ],
