--- a/Python/pandas-praticing.ipynb
+++ b/Python/pandas-praticing.ipynb
@@ -153,11 +153,132 @@
     "data = [[23, 'CA', 90, 'A'], [20, 'NY', 80, 'B'], [\n",
     "    25, 'TX', 70, 'C'], [27, 'FL', 60, 'D'], [30, 'WA', 50, 'F']]\n",
     "df = pd.DataFrame(data=data, index=row, columns=col)\n",
-    "print(df,'\\n')\n",
+    "print(df, '\\n')\n",
     "df['gender'] = ['M', 'M', 'F', 'F', 'M']\n",
-    "print(df.loc[['John']],'\\n')\n",
-    "print(df.info(),'\\n')\n",
+    "print(df.loc[['John']], '\\n')\n",
+    "print(df.info(), '\\n')\n",
     "print(df.describe())\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Handling Missing Data\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     A    B  C\n",
+      "0  1.0  5.0  1\n",
+      "1  2.0  NaN  2\n",
+      "2  NaN  NaN  3 \n",
+      "\n",
+      "     A  C\n",
+      "0  1.0  1\n",
+      "1  2.0  2\n",
+      "2  NaN  3 \n",
+      "\n",
+      "     A    B  C\n",
+      "0  1.0  5.0  1\n",
+      "1  2.0  0.0  2\n",
+      "2  0.0  0.0  3 \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Mock dataframe for Nan value\n",
+    "df2 = pd.DataFrame({'A': [1, 2, np.nan], 'B': [5, np.nan, np.nan],\n",
+    "                    'C': [1, 2, 3]})\n",
+    "print(df2, '\\n')\n",
+    "\n",
+    "# Drop the row with Nan value\n",
+    "print(df2.dropna(axis=1, thresh=2), '\\n')\n",
+    "\n",
+    "# Fill the Nan value with 0\n",
+    "print(df2.fillna(value=0), '\\n')\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Merging data\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       Food   Cost        Place\n",
+      "0       Pho  2 USD       Ha Noi\n",
+      "1   Bun Cha  3 USD       Ha Noi\n",
+      "2   Banh Mi  1 USD  Ho Chi Minh\n",
+      "3  Banh Xeo  2 USD      Da Nang \n",
+      "\n",
+      "         Place      Scenic Spots\n",
+      "0       Ha Noi         West Lake\n",
+      "1  Ho Chi Minh  Ben Thanh Market\n",
+      "2      Da Nang      My Khe Beach \n",
+      "\n",
+      "       Food   Cost        Place      Scenic Spots\n",
+      "0       Pho  2 USD       Ha Noi         West Lake\n",
+      "1   Bun Cha  3 USD       Ha Noi         West Lake\n",
+      "2   Banh Mi  1 USD  Ho Chi Minh  Ben Thanh Market\n",
+      "3  Banh Xeo  2 USD      Da Nang      My Khe Beach \n",
+      "\n",
+      "           Food        Place      Scenic Spots\n",
+      "Cost                                          \n",
+      "1 USD   Banh Mi  Ho Chi Minh  Ben Thanh Market\n",
+      "2 USD  Banh Xeo      Da Nang      My Khe Beach\n",
+      "3 USD   Bun Cha       Ha Noi         West Lake \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Vietnam have many famous food,such as Pho, Bun Cha, Banh Mi, Banh Xeo, etc.\n",
+    "# Create a dataframe to store the information of these food, cost, and the place where you can find them.\n",
+    "df_food = pd.DataFrame({'Food': ['Pho', 'Bun Cha', 'Banh Mi', 'Banh Xeo'],\n",
+    "                        'Cost': [2, 3, 1, 2],\n",
+    "                        'Place': ['Ha Noi', 'Ha Noi', 'Ho Chi Minh', 'Da Nang']})\n",
+    "# make a unit for cost\n",
+    "df_food['Cost'] = df_food['Cost'].apply(lambda x: str(x) + ' USD')\n",
+    "# Food is the index\n",
+    "# df_food.set_index('Food', inplace=True)\n",
+    "print(df_food, '\\n')\n",
+    "\n",
+    "# Create another dataframe about place and its scenic spots, one place can have many scenic spots.\n",
+    "df_place = pd.DataFrame({'Place': ['Ha Noi', 'Ho Chi Minh', 'Da Nang'],\n",
+    "                         'Scenic Spots': ['West Lake',\n",
+    "                                          'Ben Thanh Market',\n",
+    "                                          'My Khe Beach']})\n",
+    "\n",
+    "# df_place.set_index('Place', inplace=True)\n",
+    "print(df_place, '\\n')\n",
+    "\n",
+    "# Merge two dataframe\n",
+    "df_merge = pd.merge(df_food, df_place, on='Place')\n",
+    "\n",
+    "print(df_merge, '\\n')\n",
+    "# Group by Place and count the number of food in each place, print just the number of food, and name the column as 'Number of Food'\n",
+    "print(df_merge.groupby('Cost').min(), '\\n')\n",
+    "# print df_merge with all columns in same row"
    ]
   }
  ],
